# world-cup-macro-predictor

./: .gitignore  README.md  model_thesis  pyproject.toml
.omo/: boulder.json
.omo/evidence/: task-1-clean-vs-noisy.txt  task-1-clean-xg-formula.txt  task-2-poisson-qa.txt  task-4-validation-qa.txt  task-5-odds-qa.txt
.omo/plans/: betting-system-mvp.md  betting-system-phase2.md  bis-iso2-fix.md  world-cup-prediction-script.md
.omo/run-continuation/: ses_135503cc7ffeX9GnI8jC6BxoTp.json  ses_135537d61ffepq6F3VUVMBMk7z.json  ses_13da7faefffeCQhtChbK4TQbNf.json
data/historical/: fifa_rankings_2010.csv  fifa_rankings_2014.csv  fifa_rankings_2018.csv  fifa_rankings_2022.csv  fixtures_2010.csv  fixtures_2014.csv  fixtures_2018.csv  fixtures_2022.csv
data/research/: injuries.csv
src/: __init__.py  aggregate.py  bis_fetcher.py  cli.py  country_map.py  fifa_data.py  formula.py  imf_fetcher.py  output.py  predict.py  schedule.py  validation.py
src/betting/: analysis.py  api_odds.py  backtest.py  calibration.py  cli.py  clv.py  features.py  historical.py  ledger.py  markets.py  odds.py  probabilities.py  providers.py  research.py  selector.py  validation.py
src/web/: app.py  charts.py
tests/: __init__.py  conftest.py  test_aggregate.py  test_bis_fetcher.py  test_cli.py  test_country_map.py  test_fifa_data.py  test_formula.py  test_imf_fetcher.py  test_output.py  test_predict.py  test_scaffolding.py  test_schedule.py  test_validation.py
tests/betting/: conftest.py  test_analysis.py  test_api_odds.py  test_backtest.py  test_calibration.py  test_cli.py  test_clv.py  (+11 more)
(+5 files in other folders)
